gccida/c1/process_reg_param
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/process_reg_param/src/integrate.c:1061:26: error: use of undeclared identifier 'machine_mode'
v6 = copy_to_mode_reg( ( machine_mode)*( ( unsigned __int8 *)loc + 2), copy); 
                         ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/process_reg_param/src/integrate.c:1077:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v13.rtwint = ( __int64)copy->fld[0]; 
                       ^~~~~~~~~~~~
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/process_reg_param/src/obj/integrate.o] Error 1
